<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_level"
        android:textSize="24sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/test_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_level"/>

    <Button
        android:id="@+id/easy_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_level"
        android:backgroundTint="@color/green"/>
    <Button
        android:id="@+id/normal_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_level"
        android:backgroundTint="@color/yellow"/>
    <Button
        android:id="@+id/hard_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_level"
        android:backgroundTint="@color/red"/>

</LinearLayout>