<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/timer"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/QuestionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/circle_background"
        app:layout_constraintBottom_toTopOf="@+id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="1" />

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/QuestionTextStyle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#007988"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tv_right_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sum"
        tools:text="7" />

    <TextView
        android:id="@+id/tv_right_number"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#007988"
        android:text="@string/question"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_left_number"
        app:layout_constraintTop_toTopOf="@+id/tv_left_number" />

    <TextView
        android:id="@+id/tv_answers_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/score_info"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answers_progress" />

    <TextView
        android:id="@+id/tv_option_1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/tv_option_2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option_1"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_1"
        app:layout_constraintTop_toTopOf="@+id/tv_option_1"
        tools:text="2" />

    <TextView
        android:id="@+id/tv_option_3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_2"
        app:layout_constraintTop_toTopOf="@+id/tv_option_2"
        tools:text="3" />

    <TextView
        android:id="@+id/tv_option_4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        tools:text="4" />

    <TextView
        android:id="@+id/tv_option_5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4"
        app:layout_constraintTop_toTopOf="@+id/tv_option_4"
        tools:text="5" />

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5"
        app:layout_constraintTop_toTopOf="@+id/tv_option_5"
        tools:text="6" />

</androidx.constraintlayout.widget.ConstraintLayout>